--- a/votacao_app/ios/Runner/Info.plist
+++ b/votacao_app/ios/Runner/Info.plist
@@ -40,6 +40,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
+   <string>YES</string>
+
 	<false/>
 </dict>
 </plist>
